# tfm_bonn

./: 404.html  LICENSE  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt
.github/: ISSUE_TEMPLATE.md
docs/: index.md  installation.md  technical.md  usage.md
installation/: index.html
search/: search_index.json
technical/: index.html
tests/: __init__.py  test_tfm_bonn.py
tfm_bonn/: cli.py  tfm_bonn.py
tfm_bonn/analysis/: multimodality.py  mutual_information.py  neuron_ranking.py  plot_utils.py  pruning_analysis.py  training_analysis.py
tfm_bonn/data/: data_loader.py
tfm_bonn/layers/: base_layer.py  last_linear.py  linear.py
tfm_bonn/models/: base_model.py  bonn.py  ensamble_bonn  gate_bonn.py
tfm_bonn/training/: __init__.py  metrics.py  train.py  validate.py
tfm_bonn/utils/: activations.py  bias_init.py  constants.py  regularizers.py  thresholds.py
usage/: index.html
